# WalletApp

./: .gitignore  .py  Dockerfile  README.md  README.txt  docker-compose.yml  main.py  pyproject.toml
app/: .env  (+4 more)
src/: .gitignore  Dockerfile  container.py  main.py  pyproject.toml
src/api/v1/routes/: __init__.py  wallets_routes.py
src/app/: .env  container.py  main.py
src/app/api/v1/routes/: __init__.py
src/app/common/: db.py  uowProtocol.py
src/app/schemas/dto/: wallet_dto.py
src/app/schemas/requests/: wallet_request_schemes.py
src/app/wallet/application/: balance_use_case.py  operation_use_case.py
src/core/: config.py  db.py  uow.py  wallet_exceptions.py
src/liquibase_/: changelog.xml
src/schemas/dto/: wallet_dto.py
src/schemas/requests/: wallet_request_schemes.py
src/schemas/responses/: wallet_response_schemes.py
src/tests/: conftest.py
src/tests/unit/mocks/: mock_balance_use_case.py  mock_db_session.py  mock_objects.py  mock_operation_use_case.py  mock_wallet_repository.py
src/tests/unit/test_controllers/: test_wallet_deposit.py  test_wallet_get_balance.py
src/tests/unit/test_domain/: test_wallet.py
src/tests/unit/test_usecase/: test_balance_use_case.py  test_deposit_use_case.py  test_withdraw_use_case.py
src/wallet/application/: balance_use_case.py  operation_use_case.py  protocols.py
src/wallet/controllers/: protocols.py
src/wallet/controllers/wallet/: balance.py  operation.py
src/wallet/domain/: wallet.py
src/wallet/infrastructure/: models.py
src/wallet/infrastructure/repository/: protocols.py  wallet_repository.py
(+46 files in other folders)
